--- a/smach_msgs/CMakeLists.txt
+++ b/smach_msgs/CMakeLists.txt
@@ -1,15 +1,20 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 
 project(smach_msgs)
 
-find_package(catkin REQUIRED COMPONENTS 
-  message_generation std_msgs)
+find_package(ament_cmake REQUIRED)
+find_package(builtin_interfaces REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+find_package(std_msgs REQUIRED)
 
-add_message_files(FILES
-  SmachContainerInitialStatusCmd.msg
-  SmachContainerStructure.msg
-  SmachContainerStatus.msg)
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/SmachContainerInitialStatusCmd.msg"
+  "msg/SmachContainerStructure.msg"
+  "msg/SmachContainerStatus.msg"
+  DEPENDENCIES builtin_interfaces std_msgs
+  ADD_LINTER_TESTS
+)
 
-generate_messages(DEPENDENCIES std_msgs)
+ament_export_dependencies(rosidl_default_runtime)
 
-catkin_package(CATKIN_DEPENDS message_runtime)
+ament_package()
