--- a/executive_smach/package.xml
+++ b/executive_smach/package.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
-<package format="3">
+<package format="2">
   <name>executive_smach</name>
   <version>2.0.1</version>
   <description>
@@ -13,15 +12,13 @@
   <url>http://ros.org/wiki/smach</url>
   <author>Jonathan Bohren</author>
   <author>Wim Meeussen</author>
-  <author>Charles Lesire</author>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-
+  <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>smach</exec_depend>
-  <exec_depend>smach_msgs</exec_depend>
   <exec_depend>smach_ros</exec_depend>
+  <exec_depend>smach_msgs</exec_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <metapackage/>
   </export>
 </package>
