--- a/smach/package.xml
+++ b/smach/package.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
-<package format="3">
+<package>
   <name>smach</name>
   <version>2.0.1</version>
   <description>
@@ -15,12 +14,10 @@
   <license>BSD</license>
 
   <author>Jonathan Bohren</author>
-  <author>Charles Lesire</author>
 
-  <buildtool_depend>ament_python</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
   <export>
-    <build_type>ament_python</build_type>
-    <rosdoc config="rosdoc.yaml"/>
+    <rosdoc config="rosdoc.yaml"/>    
   </export>
 </package>
