--- a/smach_msgs/package.xml
+++ b/smach_msgs/package.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
-<package format="3">
+<package format="2">
   <name>smach_msgs</name>
   <version>2.0.1</version>
   <description>
@@ -12,21 +11,19 @@
   <license>BSD</license>
 
   <author>Jonathan Bohren</author>
-  <author>Charles Lesire</author>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>builtin_interfaces</build_depend>
-  <build_depend>std_msgs</build_depend>
+  <depend>std_msgs</depend>
 
-  <exec_depend>builtin_interfaces</exec_depend>
-  <exec_depend>rosidl_default_runtime</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
+  <build_depend>message_generation</build_depend>
 
-  <member_of_group>rosidl_interface_packages</member_of_group>
+  <exec_depend>message_runtime</exec_depend>
+  <build_export_depend>message_runtime</build_export_depend>
 
+  <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <build_type>ament_cmake</build_type>
+    <rosdoc config="rosdoc.yaml"/>
   </export>
 </package>
+
