--- a/smach/package.xml
+++ b/smach/package.xml
@@ -17,6 +17,8 @@
   <author>Jonathan Bohren</author>
   <author>Charles Lesire</author>
 
+  <buildtool_depend>ament_python</buildtool_depend>
+
   <export>
     <build_type>ament_python</build_type>
     <rosdoc config="rosdoc.yaml"/>
